--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.3",
+		"moment": "^2.29.4",
 		"ogp-parser": "^0.6.0",
 		"prettier": "^2.5.1",
 		"rss-parser": "^3.12.0",
